--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 numpy==1.17.2
+torch==1.4.0+cpu
 streamlit==0.56.0
 Flask==1.1.1
 music21==5.7.2
@@ -9,3 +10,5 @@ flask_cors==3.0.8
 graphviz==0.14
 pebble==4.5.1
 protobuf==3.11.3
+fastai==1.0.60
+
