--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,3 @@
-numpy==1.22.0
 --find-links https://download.pytorch.org/whl/torch_stable.html
 torch==1.3.1+cpu
 streamlit==0.56.0
@@ -12,4 +11,4 @@ graphviz==0.14
 pebble==4.5.1
 protobuf==3.18.3
 fastai==1.0.60
-
+numpy
